// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AssessmentErrorAlert > 스냅샷 > should match snapshot for network error 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90 mb-6"
    data-slot="alert"
    role="alert"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        aria-hidden="true"
        class="flex-shrink-0 mt-0.5"
      >
        <svg
          class="lucide lucide-wifi-off h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 20h.01"
          />
          <path
            d="M8.5 16.429a5 5 0 0 1 7 0"
          />
          <path
            d="M5 12.859a10 10 0 0 1 5.17-2.69"
          />
          <path
            d="M19 12.859a10 10 0 0 0-2.007-1.523"
          />
          <path
            d="M2 8.82a15 15 0 0 1 4.177-2.643"
          />
          <path
            d="M22 8.82a15 15 0 0 0-11.288-3.764"
          />
          <path
            d="m2 2 20 20"
          />
        </svg>
      </div>
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="col-start-2 line-clamp-1 min-h-4 tracking-tight text-base font-semibold"
          data-slot="alert-title"
        >
          네트워크 연결 오류
        </div>
        <div
          class="text-muted-foreground col-start-2 grid justify-items-start gap-1 [&_p]:leading-relaxed text-sm"
          data-slot="alert-description"
        >
          <p
            class="mb-2"
          >
            인터넷 연결이 불안정합니다.
          </p>
          <p
            class="text-sm opacity-90"
          >
            네트워크 연결을 확인하고 다시 시도해주세요.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AssessmentErrorAlert > 스냅샷 > should match snapshot with custom message 1`] = `
<div>
  <div
    class="relative w-full rounded-lg border px-4 py-3 text-sm grid has-[>svg]:grid-cols-[calc(var(--spacing)*4)_1fr] grid-cols-[0_1fr] has-[>svg]:gap-x-3 gap-y-0.5 items-start [&>svg]:size-4 [&>svg]:translate-y-0.5 text-destructive bg-card [&>svg]:text-current *:data-[slot=alert-description]:text-destructive/90 mb-6"
    data-slot="alert"
    role="alert"
  >
    <div
      class="flex items-start gap-3"
    >
      <div
        aria-hidden="true"
        class="flex-shrink-0 mt-0.5"
      >
        <svg
          class="lucide lucide-circle-alert h-5 w-5"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="12"
            r="10"
          />
          <line
            x1="12"
            x2="12"
            y1="8"
            y2="12"
          />
          <line
            x1="12"
            x2="12.01"
            y1="16"
            y2="16"
          />
        </svg>
      </div>
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="col-start-2 line-clamp-1 min-h-4 tracking-tight text-base font-semibold"
          data-slot="alert-title"
        >
          오류가 발생했습니다
        </div>
        <div
          class="text-muted-foreground col-start-2 grid justify-items-start gap-1 [&_p]:leading-relaxed text-sm"
          data-slot="alert-description"
        >
          <p
            class="mb-2"
          >
            Custom error message
          </p>
          <p
            class="text-sm opacity-90"
          >
            페이지를 새로고침하거나 잠시 후 다시 시도해주세요.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
